Area Cuadrado Finalizado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".Realizadas" />
         <activity android:name=".Areas" />
-        <activity android:name=".Volumenes"></activity>
+        <activity android:name=".Volumenes" />
+        <activity android:name=".areas_Cuadrado"></activity>
     </application>
 
 </manifest>
